changes by kuldip.

--- a/ERP_System/Views/Home/Index.cshtml
+++ b/ERP_System/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Title Page";
+    ViewBag.Title = "Home Page";
 }
 @section featured {
     <section class="featured">
@@ -30,8 +30,6 @@
         the latest web standards.
         <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
     </li>
-
-
     <li class="two">
         <h5>Add NuGet packages and jump-start your coding</h5>
         NuGet makes it easy to install and update free libraries and tools.
